# blink

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
app/: _app.tsx  layout.tsx  not-found.tsx  page.tsx  server-component.ts
app/(blinkboard)/: layout.tsx  page.tsx
app/actions.json/: route.ts
app/analytics/: page.tsx
app/api/: README.md  bark-blink-api.yaml  page.tsx
app/blinkboard/: layout.tsx  page.tsx
app/blinks/: layout.tsx  page.tsx
app/commerce/: page.tsx
app/constants/: index.ts  solana.ts
app/context/: auth-context.tsx  blink-context.tsx  wallet-provider.tsx
app/create/: page.tsx
app/create-cnft/: page.tsx
app/crowdfunding/: page.tsx
app/customize/: page.tsx
components/: blinkboard.tsx  custom-tooltip.tsx  error-boundary.tsx  generate-keypairs.ts  launch-app-button.tsx  market-price.ts  market-price.tsx  preview.tsx  solana-qr-code-generator.tsx  theme-provider.tsx  token-swap.tsx  user-account-form.tsx
lib/: api-utils.ts  auth.ts  cache.ts  db.ts  env.ts  generate-keypairs.ts  ibfs.ts  logger.ts  rate-limit.ts  s3.ts  solana-utils.ts  solana-wallet-config.ts  solana.ts  stripe.ts  user-utils.ts  utils.server.ts  utils.ts  validators.ts
middleware/: auth.ts
prisma/: schema.prisma
programs/: README.md
programs/blink/: Cargo.toml
programs/blink/src/: blink.rs  collection.rs  donations.rs  errors.rs  lib.rs  mint.rs  nft.rs  payments.rs  swap.rs
supabase/: supabase.js  types.ts
(+226 files in other folders)
