[package]
name = "bark-blinks"
version = "0.1.0"
description = "BARK BLINKS Solana Program"
edition = "2021"
license = "MIT"
authors = ["BARK Protocol"]

[lib]
crate-type = ["cdylib", "lib"]
name = "bark_blinks"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "2.0.11"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "4.1.2", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "2.0.11"
solana-program-test = "2.0.11"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1